# sgm_stereo

./: CMakeLists.txt  nodelet_plugins.xml  package.xml
config/: sgm_params.yaml  sgm_pcl_filter_params.yaml
include/sgm_stereo/: SGMStereo.h  sgm_stereo_node.h
launch/: sgm_stereo_standalone.launch
src/: SGMStereo.cpp  sgm_stereo_node.cpp
