<?xml version="1.0"?>
<package format="2">
  <name>sgm_stereo</name>
  <version>0.0.1</version>
  <description>The sgm_stereo package is a ros wrapper around the SGMStereo code by Koichiro Yamaguchi. Source code is located here - https://github.com/siposcsaba89/sps-stereo</description>

  <maintainer email="vmehta@clearpath.ai">vmehta</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>stereo_image_proc</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
